# mailing_management_service

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_is_published_alter_blog_published_date.py
blog/templates/blog/: blog_detail.html
config/: settings.py  urls.py
mailing/: admin.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_logs_mailing_status_and_more.py  0003_alter_settings_mailing_status.py  0004_client_owner_message_owner_settings_owner_and_more.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  home_page.html  message_confirm_delete.html  message_detail.html  message_form.html  settings_confirm_delete.html  settings_detail.html  settings_form.html  settings_list.html
mailing/templates/mailing/include/: inc_navbar.html
mailing/templatetags/: my_tags.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_is_banned.py
users/templates/users/: login.html  register.html  user_form.html  user_list.html  verify_sent.html
